[package]
name = "ipcalc"
version = "0.1.0"
authors = ["nateph <natebph@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
regex = "1"
serde_json = "1.0"